--- a/backend/package.json
+++ b/backend/package.json
@@ -1,17 +1,37 @@
 {
-  "name": "taskagotchi",
+  "name": "taskagotchi-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/server.js",
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
+    "build": "tsc",
+    "lint": "eslint . --ext .ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "mongodb": "^6.13.0"
+    "dotenv": "^16.4.7",
+    "express": "^4.18.2",
+    "helmet": "^8.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.13.0",
+    "mongoose": "^8.10.0",
+    "morgan": "^1.10.0"
+  },
+  "description": "",
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.5",
+    "nodemon": "^3.0.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17", 
+    "@types/jsonwebtoken": "^9.0.8",
+    "@types/morgan": "^1.9.9"
   }
 }
