--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
 PORT=5050
 JWT_SECRET=JWT_SECRET=6x!A%D*G-KaPdSgVkYp3s6v9y/B?E(H+
+MONGODB_URI=mongodb://localhost:27017/taskagotchi
+NODE_ENV=development
