--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,9 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Install frontend packages
         working-directory: ./frontend
         run: npm ci
@@ -19,10 +22,12 @@ jobs:
         working-directory: ./frontend
         run: npm run lint
 
-
   test:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Install frontend packages
         working-directory: ./frontend
         run: npm ci
@@ -30,7 +35,3 @@ jobs:
       - name: Run frontend tests + coverage
         working-directory: ./frontend
         run: npm run coverage
-
-
-
-  
