--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,8 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
+    "jsdom": "^26.0.0",
+    "msw": "^2.7.0",
     "postcss": "^8.5.2",
     "vite": "^6.1.0",
     "vitest": "^3.0.5"
