--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -14,7 +14,7 @@
       "paths": {
         "@/*": ["src/*"]
       },
-      "types": ["node", "express"],
+      "types": ["node", "express"]
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules"]
