--- a/.github/workflows/backend-test.yml
+++ b/.github/workflows/backend-test.yml
@@ -24,9 +24,17 @@ jobs:
       working-directory: ./backend
       run: npm ci
 
-    - name: Run Backend Tests
+    - name: Run Backend Tests with Coverage
       working-directory: ./backend
-      run: npm test
+      run: npm run test:coverage
       env:
         NODE_ENV: test
         JWT_SECRET: test-secret
+
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        directory: ./backend/coverage
+        flags: backend
+        name: backend-coverage
+        fail_ci_if_error: true
