--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint . --ext .ts",
     "test": "cross-env NODE_ENV=test jest --detectOpenHandles --forceExit",
     "test:watch": "cross-env NODE_ENV=test jest --watch",
-    "test:coverage": "cross-env NODE_ENV=test jest --coverage"
+    "test:coverage": "cross-env NODE_ENV=test jest --coverage --detectOpenHandles --forceExit"
   },
   "keywords": [],
   "author": "",
