--- a/.github/workflows/backend-test.yml
+++ b/.github/workflows/backend-test.yml
@@ -9,7 +9,6 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
     
@@ -24,7 +23,31 @@ jobs:
       working-directory: ./backend
       run: npm ci
 
-    - name: Run Backend Tests with Coverage
+    - name: Run Backend Functionality Tests
+      working-directory: ./backend
+      run: npm test
+      env:
+        NODE_ENV: test
+        JWT_SECRET: test-secret
+  
+  coverage:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Use Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20.x'
+        cache: 'npm'
+        cache-dependency-path: backend/package-lock.json
+
+    - name: Install Backend Dependencies
+      working-directory: ./backend
+      run: npm ci
+
+    - name: Run Backend Coverage Tests
       working-directory: ./backend
       run: npm run test:coverage
       env:
