--- a/.github/workflows/backend-test.yml
+++ b/.github/workflows/backend-test.yml
@@ -29,6 +29,8 @@ jobs:
       env:
         NODE_ENV: test
         JWT_SECRET: test-secret
+        COLLECT_COVERAGE: false
+
   
   coverage:
     runs-on: ubuntu-latest
@@ -53,6 +55,7 @@ jobs:
       env:
         NODE_ENV: test
         JWT_SECRET: test-secret
+        COLLECT_COVERAGE: true
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
