--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.8.1",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
+    "react-confetti": "^6.4.0",
     "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
