--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,3 +35,12 @@ jobs:
       - name: Run frontend tests + coverage
         working-directory: ./frontend
         run: npm run coverage
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          directory: ./frontend/coverage
+          flags: frontend-vitest
+          name: frontend-coverage
+          fail_ci_if_error: true
