remove unrelated files and adding more to .gitignroe

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,21 @@
 **/.DS_Store
 node_modules
 backend/.env
+
+*/node_modules
+**/node_modules
+
+.env
+.env.*
+!.env.example
+
+.idea/
+.vscode/
+*.sublime-*
+*.swp
+*.swo
+.DS_Store
+Thumbs.db
+
+dist/
+build/
