--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,2 +1,22 @@
+.DS_Store
+**/.DS_Store
 node_modules
+backend/.env
+
+*/node_modules
+**/node_modules
+
 .env
+.env.*
+!.env.example
+
+.idea/
+.vscode/
+*.sublime-*
+*.swp
+*.swo
+.DS_Store
+Thumbs.db
+
+dist/
+build/
