--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,20 @@
 node_modules
 backend/.env
+
+*/node_modules
+**/node_modules
+
+.env
+.env.*
+!.env.example
+
+.idea/
+.vscode/
+*.sublime-*
+*.swp
+*.swo
 .DS_Store
-**/.DS_Store
+Thumbs.db
+
+dist/
+build/
